--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "angular-directives-in-traction",
-  "version": "0.0.1",
-  "description": "A goto guide for any angular developer to learn angular directives from ground up",
+  "name": "angular2-directives-in-traction",
+  "version": "0.0.2",
+  "description": "A goto guide for any angular developer to learn angular2 directives/components from ground up",
   "main": "index.html",
   "directories": {
     "test": "tests"
@@ -9,7 +9,11 @@
   "scripts": {
     "test": "karma start unit.conf.js --singleRun true && npm run test-e2e",
     "test-unit": "karma start unit.conf.js",
-    "test-e2e": "./node_modules/protractor/bin/protractor e2e.conf.js"
+    "test-e2e": "./node_modules/protractor/bin/protractor e2e.conf.js",
+    "tsc": "tsc",
+    "tsc:w": "tsc -w",
+    "lite": "lite-server",
+    "start": "concurrent \"npm run tsc:w\" \"npm run lite\" "
   },
   "repository": "",
   "keywords": [
@@ -23,12 +27,24 @@
   ],
   "author": "Amit Gharat a.k.a codef0rmer",
   "license": "MIT",
+  "dependencies": {
+    "angular2": "2.0.0-beta.0",
+    "es6-promise": "^3.0.2",
+    "es6-shim": "^0.33.3",
+    "reflect-metadata": "0.1.2",
+    "rxjs": "5.0.0-beta.0",
+    "systemjs": "0.19.6",
+    "zone.js": "0.5.10"
+  },
   "devDependencies": {
     "bower": "~1.3.3",
     "karma": "~0.12.16",
     "karma-chrome-launcher": "~0.1.3",
     "karma-firefox-launcher": "~0.1.3",
     "karma-jasmine": "~0.1.5",
-    "protractor": "^2.1.0"
+    "protractor": "^2.1.0",
+    "concurrently": "^1.0.0",
+    "lite-server": "^1.3.1",
+    "typescript": "^1.7.3"
   }
 }
