--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "angular2": "2.0.0-beta.14",
     "es6-promise": "^3.0.2",
     "es6-shim": "^0.35.0",
+    "jquery": "^2.2.3",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.2",
     "systemjs": "0.19.6",
