--- a/package.json
+++ b/package.json
@@ -7,13 +7,12 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "karma start unit.conf.js --singleRun true && npm run test-e2e",
-    "test-unit": "karma start unit.conf.js",
-    "test-e2e": "./node_modules/protractor/bin/protractor e2e.conf.js",
+    "start": "tsc && concurrently \"npm run tsc:w\" \"npm run lite\" ",
+    "lite": "lite-server",
+    "postinstall": "typings install",
     "tsc": "tsc",
     "tsc:w": "tsc -w",
-    "lite": "lite-server",
-    "start": "concurrent \"npm run tsc:w\" \"npm run lite\" "
+    "typings": "typings"
   },
   "repository": "",
   "keywords": [
@@ -28,24 +27,34 @@
   "author": "Amit Gharat a.k.a codef0rmer",
   "license": "MIT",
   "dependencies": {
-    "angular2": "^2.0.0-beta.17",
-    "es6-promise": "^3.0.2",
-    "es6-shim": "^0.35.0",
+    "@angular/common": "2.0.0-rc.4",
+    "@angular/compiler": "2.0.0-rc.4",
+    "@angular/core": "2.0.0-rc.4",
+    "@angular/http": "2.0.0-rc.4",
+    "@angular/platform-browser": "2.0.0-rc.4",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.4",
+    "@angular/router": "3.0.0-beta.1",
+    "@angular/router-deprecated": "2.0.0-rc.2",
+    "@angular/upgrade": "2.0.0-rc.4",
+    "angular2-in-memory-web-api": "0.0.14",
+    "bootstrap": "^3.3.6",
+    "core-js": "^2.4.0",
+    "iscroll": "~5.1.1",
     "jquery": "^1.10.2",
-    "reflect-metadata": "0.1.2",
+    "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.6",
-    "systemjs": "0.19.6",
-    "zone.js": "0.6.12"
+    "systemjs": "0.19.27",
+    "zone.js": "^0.6.12"
   },
   "devDependencies": {
-    "bower": "~1.3.12",
+    "concurrently": "^2.0.0",
     "karma": "~0.12.37",
     "karma-chrome-launcher": "~0.1.3",
     "karma-firefox-launcher": "~0.1.3",
     "karma-jasmine": "~0.1.5",
-    "protractor": "^2.1.0",
-    "concurrently": "^1.0.0",
-    "lite-server": "^1.3.4",
-    "typescript": "^1.8.0"
+    "lite-server": "^2.2.0",
+    "protractor": "^4.0.0",
+    "typescript": "^1.8.10",
+    "typings": "^1.0.4"
   }
 }
